# MyCXXApplication

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mycxxapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseObject.cpp  BaseObject.h  CMakeLists.txt  ChildObject.cpp  ChildObject.h  Common.cpp  Common.h  ComponentTest.cpp  ThreadUtils.cpp  ThreadUtils.h  TimeUtils.h  native-lib.cpp
app/src/main/cpp/base/: BaseObject.cpp  BaseObject.h  BaseTest.cpp  BaseTypeTest.cpp  ByteBufferTest.cpp  ByteBufferTest.h  ChildObject.cpp  ChildObject.h  CollectionTest.cpp  JniTransDataTest.cpp  PointerTest.cpp  StringTest.cpp  ThreadTest.cpp  const_keyword_test.cpp
app/src/main/cpp/base/array/: CollectionTest.cpp
app/src/main/cpp/base/file/: FileTest.cpp
app/src/main/cpp/base/memory/: MemoryTest.cpp
app/src/main/cpp/base/object/: BaseObject.cpp  BaseObject.h  ChildObject.cpp  ChildObject.h  Complex.h  ObjectLifeTest.cpp  ObjectLifeTest.h  ObjectTest.cpp  simple_object.cpp  simple_object.h
app/src/main/cpp/base/object/bean/: Complex.cpp  Complex.h  MyString.cpp  MyString.h
app/src/main/cpp/base/transfer/: JNIYuvDataTransfer.cpp  JNIYuvDataTransfer.h
app/src/main/cpp/cmake/: CMakeLists.txt
app/src/main/cpp/component/: AHandler.cpp  AHandler.h  ALooper.cpp  ALooper.h  AThread.cpp  AThread.h  Timers.cpp  Timers.h
app/src/main/cpp/component/thread/: DreamHandler.cpp  DreamHandler.h  DreamHandlerTest.cpp  DreamHandlerTest.h  DreamLooper.cpp  DreamLooper.h  DreamLooperRoster.cpp  DreamLooperRoster.h  DreamMessage.cpp  DreamMessage.h  dream_base_utils.h  dream_handler.cpp  dream_handler.h  dream_handler_test.cpp  dream_handler_test.h  dream_looper.cpp  dream_looper.h  dream_looper_roster.cpp  dream_looper_roster.h  dream_message.cpp  dream_message.h
app/src/main/cpp/utils/: ThreadUtils.cpp  TimeUtils.cpp  TimeUtils.h
app/src/main/java/com/example/mycxxapplication/: BaseTest.java  BaseTypeTest.java  ByteBufferTest.java  JNITransDataTest.java  MainActivity.java  MemoryTest.java
app/src/main/java/com/example/mycxxapplication/bean/: Person.java
app/src/main/java/com/example/mycxxapplication/jni/: BaseTest.java  CollectionTest.java  ComponentTest.java  FileTest.java  ObjectTest.java  PointerTest.java  StringTest.java  TestInterface.java  ThreadTest.java
app/src/main/java/com/example/mycxxapplication/libyuv/: JNIPixelFormatBean.java  JNIPixelOptionBean.java  LibYuvTest.java
app/src/main/java/com/example/mycxxapplication/ui/: BaseActivity.java  LibYuvTestActivity.java  MainActivity.java
app/src/main/java/com/example/mycxxapplication/ui/view/: MyImageView.java
app/src/main/java/com/example/mycxxapplication/utils/: LogUtils.java
app/src/main/res/layout/: activity_libyuv_test.xml  activity_main.xml  layout_bytebuffer_test.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/mycxxapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
